# ex_iceberg

./: .envrc.sample  .gitignore  .tool-versions  CHANGELOG.md  README.md  RELEASE.md  THIRD_PARTY_LICENSES.md  create-default-warehouse.json  docker-compose.yml  mix.exs
.github/: dependabot.yml
.github/workflows/: ci.yml  precompile.yml  release.yml
keycloak/: realm.json
lib/: ex_iceberg.ex
lib/ex_iceberg/: catalog.ex  config.ex  http_client.ex  namespace_ident.ex  nif.ex  req_client.ex  schema.ex  table.ex  table_ident.ex  types.ex
lib/ex_iceberg/catalog/: rest_catalog.ex
lib/ex_iceberg/glue/: catalog.ex  client.ex  config.ex
lib/ex_iceberg/rest/: catalog.ex  catalog_config.ex  client.ex  config.ex  response.ex
lib/ex_iceberg/s3/: config.ex
lib/ex_iceberg/table/: manifests_table.ex  metadata_table.ex  snapshots_table.ex
native/ex_iceberg/: Cargo.toml  Cross.toml  README.md
native/ex_iceberg/.cargo/: config.toml
native/ex_iceberg/src/: atoms.rs  catalog.rs  lib.rs  lib_old.rs  table.rs  types.rs
native/ex_iceberg_nif/: Cargo.toml  README.md
test/: test_helper.exs
test/integration/catalog/: rest_catalog_integration_test.exs  tabular_integration_test.exs
test/integration/rest/: catalog_test.exs
test/unit/: table_ident_test.exs  table_test.exs
test/unit/catalog/: rest_catalog_test.exs
test/unit/rest/: catalog_test.exs  client_test.exs  config_test.exs
