[package]
name = "ex_iceberg"
version = "0.3.0"
edition = "2021"

[lib]
name = "ex_iceberg"
crate-type = ["cdylib"]

[features]
default = []
rustler_precompiled = []

[dependencies]
rustler = "0.36.1"
iceberg = "0.7.0"
iceberg-catalog-rest = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
