[package]
name = "ex_iceberg_nif"
version = "0.3.0"
edition = "2021"

[lib]
name = "ex_iceberg_nif"
crate-type = ["cdylib"]

[features]
default = []
rustler_precompiled = []

[dependencies]
rustler = "0.36.1"
iceberg = "0.4"
iceberg-catalog-rest = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
